@@ -1,3 +1,8 @@
+2013-12-01  TANAKA Takuji <KXD02663@nifty.ne.jp>
+
+	* openclose.c, texmfmp.c: Support KANJI file name in
+	(e)up-TeX on Windows.
+
 2013-06-11  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Update to e-pTeX and e-upTeX 130605 from Hironori Kitagawa.
